fix brand image&text overflow

--- a/style.css
+++ b/style.css
@@ -886,7 +886,6 @@ header {
 
   #projects p,
   #projects .project__aside {
-    text-wrap: nowrap;
     font-weight: 300;
     line-height: 1.5;
     font-size: 1rem;
